# CadenceAI

./: .anvil_editor.yaml  .gitignore  Dockerfile  README.md  anvil.yaml  config.yaml  docker-compose.yaml  pyproject.toml
client_code/: README.md  dev_llm_call.py
client_code/Form1/: Module1.py  __init__.py  form_template.yaml
poc/open-ai/: README.md  call_agent.py  q_a.jsonl  q_a_compact.jsonl
server_code/: Backend.py  README.md  llm_server.py  send_llm_query.py  send_vision_query.py
server_code/dev/: send_llm_query.py
