[tool.poetry]
name = "cadenceai"
version = "0.1.0"
description = "Your all-in-one AI-powered cycling coach, mechanic, analyst and dietitian"
authors = ["Gleb Lukicov <https://glukicov.github.io>"]
license = "GNU"
readme = "README.md"
packages = [{ include = "server_code" }, { include = "client_code" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
anvil = "^0.0.2"
anvil-app-server = "^1.10.1"
loguru = "^0.7.2"
llama-cpp-python = "^0.2.39"
google-cloud-aiplatform = "^1.41.0"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pydantic = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
